--- a/Harvard/repair_2/styles.css
+++ b/Harvard/repair_2/styles.css
@@ -173,7 +173,8 @@ main {
   position: absolute;
   top: var(--spacing-sm);
   right: var(--spacing-sm);
-  color: var(--success-color);
+  /* color: var(--success-color); */
+  color: #007bff;
   font-size: 0.8rem;
   font-weight: normal;
 }
@@ -340,3 +341,4 @@ main {
   transform: scale(1.02);
 
 }
+
