--- a/Harvard/repair_2/styles.css
+++ b/Harvard/repair_2/styles.css
@@ -174,7 +174,7 @@ main {
   top: var(--spacing-sm);
   right: var(--spacing-sm);
   /* color: var(--success-color); */
-  color: #0000FF;
+  color: #007BFF;
   font-size: 0.8rem;
   font-weight: normal;
 }
@@ -341,6 +341,7 @@ main {
   transform: scale(1.02);
 
 }
+
 
 
 
