--- a/Harvard/repair_2/styles.css
+++ b/Harvard/repair_2/styles.css
@@ -342,6 +342,14 @@ main {
 
 }
 
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: white;
+    margin-top: 1rem;
+}
+
 
 
 
